@@ -21,8 +21,8 @@ use Sub::Exporter -setup => {
 		numwise stringwise
 		string string_length
 		object instance_of ref_type
-		array array_length tuple head sequence
-		hash hash_keys
+		array array_length tuple head sequence contains sorted
+		hash hash_keys hash_values
 	/],
 	groups => {
 		junctive => [qw/any all none one/],
@@ -33,8 +33,8 @@ use Sub::Exporter -setup => {
 		meta     => [qw/match delegate/],
 		string   => [qw/string string_length/],
 		refs     => [qw/object instance_of ref_type/],
-		arrays   => [qw/array array_length tuple head sequence/],
-		hashes   => [qw/hash hash_keys/],
+		arrays   => [qw/array array_length tuple head sequence contains sorted/],
+		hashes   => [qw/hash hash_keys hash_values/],
 	},
 };
 
@@ -183,11 +183,26 @@ sub head {
 	return match { scalar array_length(at_least(scalar @entries)) and [ @{$_}[ 0..$#entries ] ] ~~ @entries };
 }
 
+sub contains {
+	my $matcher = shift;
+	return match { scalar array and List::MoreUtils::any { $_ ~~ $matcher } @{$_} };
+}
+
+sub sorted {
+	my $matcher = shift;
+	return match { scalar array and [ sort @{$_} ] ~~ $matcher };
+}
+
 use constant hash => ref_type('HASH');
 
 sub hash_keys {
 	my $matcher = shift;
-	return match { scalar hash and [ sort keys %{$_} ] ~~ $matcher };
+	return match { scalar hash and [ keys %{$_} ] ~~ $matcher };
+}
+
+sub hash_values {
+	my $matcher = shift;
+	return match { scalar hash and [ values %{$_} ] ~~ $matcher };
 }
 
 1;
@@ -343,9 +358,17 @@ Matches a list whose elements match C<@entries> one by one.
 
 Matches a list whose head elements match C<@entries> one by one.
 
-=func sequence($matches)
+=func sequence($matcher)
 
 Matches a list whose elements all match C<$matcher>.
+
+=func contains($matcher)
+
+Matches a list that contains an element matching C<$matcher>.
+
+=func sorted($matcher)
+
+Sorts a list and matches it against C<$matcher>.
 
 =func hash()
 
@@ -353,7 +376,11 @@ Matches any unblessed hash.
 
 =func hash_keys($matcher)
 
-Match a sorted list of hash keys against $matcher.
+Match a list of hash keys against C<$matcher>.
+
+=func hash_values($matches)
+
+Match a list of hash values against C<$matcher>
 
 =func match { ... }
 
