@@ -1,6 +1,7 @@
 Revision history for Smart-Match
 
 {{$NEXT}}
+          Added contains, sorted and hash_values
 
 0.002     2011-06-08 00:39:45 Europe/Amsterdam
           Renamed from Match-Smart to Smart-Match because Match::Smart was already taken on CPAN
